--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   json_annotation: ^4.8.1
   intl: ^0.18.1
   dio: ^5.4.0
+  data_table_2: ^2.6.0
+  flutter_debouncer: ^2.0.0
 
 dev_dependencies:
   flutter_test:
