--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -15,7 +15,7 @@
       "type": "dart",
       "request": "launch",
       "program": "lib/main.dart",
-      "flutterMode": "profile",
+      "flutterMode": "release",
       "args": ["--web-hostname=0.0.0.0", "--web-port=8080"]
     }
   ]
