--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   dio: ^5.4.0
   data_table_2: ^2.6.0
   flutter_debouncer: ^2.0.0
+  google_fonts: ^6.3.1
 
 dev_dependencies:
   flutter_test:
