--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   data_table_2: ^2.6.0
   flutter_debouncer: ^2.0.0
   google_fonts: ^6.3.1
+  connectivity_plus: ^7.0.0
 
 dev_dependencies:
   flutter_test:
