--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   flutter_debouncer: ^2.0.0
   google_fonts: ^6.3.1
   connectivity_plus: ^7.0.0
+  flutter_secure_storage: ^9.2.4
 
 dev_dependencies:
   flutter_test:
@@ -69,6 +70,7 @@ flutter:
   # the material Icons class.
   uses-material-design: true
   assets:
+    - assets/
     - assets/data/
 
   # To add assets to your application, add an assets section, like this:
