--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   google_fonts: ^6.3.1
   connectivity_plus: ^7.0.0
   flutter_secure_storage: ^9.2.4
+  collection: ^1.18.0
 
 dev_dependencies:
   flutter_test:
