Update launch configuration, enhance error handling, and add business partner search functionality
- Updated launch configuration to include staging and production modes.
- Improved error handling in `ApiClient` by introducing a dedicated method for handling Dio errors.
- Added `BusinessPartnerInfoRecord` entity and `searchBusinessPartner` method in `BusinessPartnerRepository` for enhanced business partner search capabilities.
- Introduced `BPartnerSearchDialog` for user-friendly search interface, integrating with the dashboard for better data management.
- Refactored dashboard components to support new search functionality and improved user experience.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,13 +8,13 @@
       "name": "Medibuk",
       "type": "dart",
       "request": "launch",
-      "program": "lib/main.dart"
+      "program": "lib/main_staging.dart"
     },
     {
-      "name": "Medibuk (profile mode)",
+      "name": "Medibuk (production mode)",
       "type": "dart",
       "request": "launch",
-      "program": "lib/main.dart",
+      "program": "lib/main_production.dart",
       "flutterMode": "release",
       "args": ["--web-hostname=0.0.0.0", "--web-port=8080"]
     }
